[package]
name = "db-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server — connects MySQL/PostgreSQL to LLMs in VSCode / Zed"

[[bin]]
name = "db-mcp"
path = "src/main.rs"

[dependencies]
tokio              = { version = "1",   features = ["full"] }
serde              = { version = "1",   features = ["derive"] }
serde_json         = "1"
sqlx               = { version = "0.8", features = ["runtime-tokio-rustls", "any", "mysql", "postgres"] }
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
